corrected definitions (sentence -> unit, relation -> annotation)

--- a/tutorial/CrowdTruth metrics 2.0 documentation.ipynb
+++ b/tutorial/CrowdTruth metrics 2.0 documentation.ipynb
@@ -17,51 +17,51 @@
     "\n",
     "## Media Unit Quality Score (UQS)\n",
     "\n",
-    "The unit quality score $UQS(u)$ is computed as the average cosine similarity between all worker vectors for a given input media unit $u$, weighted by the worker quality ($WQS$) and annotation quality ($AQS$). The goal is to capture the degree of agreement in annotating the sentence. Through the weighted average, workers and relations with lower quality will have less of an impact on the final score.\n",
+    "The unit quality score $UQS(u)$ is computed as the average cosine similarity between all worker vectors for a given input media unit $u$, weighted by the worker quality ($WQS$) and annotation quality ($AQS$). The goal is to capture the degree of agreement in annotating the media unit. Through the weighted average, workers and annotations with lower quality will have less of an impact on the final score.\n",
     "\n",
     "$$ UQS(u) = \\frac{\\sum_{i, j \\in workers(u)} Wcos(WorkVec(i,u), WorkVec(j,u)) \\; WQS(i) \\; WQS(j)}{\\sum_{i, j \\in workers(u)} WQS(i) \\; WQS(j)}, \\; i \\neq j.$$\n",
     "\n",
     "\n",
     "### Weighted Cosine\n",
     "\n",
-    "To weigh the metrics with the relation quality, we compute $Wcos$, the weighted version of the cosine similarity. This metric is only applicable to closed tasks, where annotation quality can be calculated across sentences. For open-ended tasks, we consider annotation quality equal to 1 and calculate the regular cosine similarity.\n",
+    "To weigh the metrics with the annotation quality, we compute $Wcos$, the weighted version of the cosine similarity. This metric is only applicable to closed tasks, where annotation quality can be calculated across media units. For open-ended tasks, we consider annotation quality equal to 1 and calculate the regular cosine similarity.\n",
     "\n",
     "$$ Wcos(vec_1, vec_2) = \\frac{\\sum_{a} vec_1(a) \\; vec_2(a) \\; AQS(a)}{\\sqrt{(\\sum_{a} vec_1^2(a) \\; AQS(a)) \\; (\\sum_{a} vec_2^2(a) \\; AQS(a))}} .$$ \n",
     "\n",
     "\n",
     "## Worker Quality Score (WQS)\n",
     "\n",
-    "The worker quality score $WQS(i)$ for a given worker $i$ is the product of 2 separate metrics - the worker-worker agreement $WWA(i)$ and the worker-sentence agreement $WSA(i)$.\n",
+    "The worker quality score $WQS(i)$ for a given worker $i$ is the product of 2 separate metrics - the worker-worker agreement $WWA(i)$ and the worker-media unit agreement $WUA(i)$.\n",
     "\n",
-    "$$ WQS(i) = WSA(i) \\; WWA(i) .$$\n",
+    "$$ WQS(i) = WUA(i) \\; WWA(i) .$$\n",
     "\n",
-    "### Worker-Sentence Agreement\n",
+    "### Worker-Media Unit Agreement\n",
     "\n",
-    "The worker-sentence agreement $WSA(i)$ is the average cosine distance between the annotations of a worker $i$ and all annotations for the sentences they have worked on, weighted by the sentence and relation quality. It calculates how much a worker disagrees with the crowd on a sentence basis. Through the weighted average, sentences and relations with lower quality will have less of an impact on the final score.\n",
+    "The worker-media unit agreement $WUA(i)$ is the average cosine distance between the annotations of a worker $i$ and all annotations for the media units they have worked on, weighted by the media unit and annotation quality. It calculates how much a worker disagrees with the crowd on a media unit basis. Through the weighted average, media units and anntation with lower quality will have less of an impact on the final score.\n",
     "\n",
-    "$$ WSA(i) = \\frac{\\sum_{s \\in sentences(i)} Wcos(WorkVec(i,s), MediaUnitVec(s) - WorkVec(i, s)) \\; UQS(s)}{\\sum_{s \\in sentences(i)} UQS(s)} .$$\n",
+    "$$ WSA(i) = \\frac{\\sum_{u \\in units(i)} Wcos(WorkVec(i,u), MediaUnitVec(u) - WorkVec(i, u)) \\; UQS(u)}{\\sum_{u \\in units(i)} UQS(u)} .$$\n",
     "\n",
     "### Worker-Worker Agreement\n",
     "\n",
-    "The worker-worker agreement $WWA(i)$ is the average cosine distance between the annotations of a worker $i$ and all other workers that have worked on the same sentences as worker $i$, weighted by the worker and relation qualities. The metric gives an indication as to whether there are consisently like-minded workers. This is useful for identifying communities of thought. Through the weighted average, workers and relations with lower quality will have less of an impact on the final score of the given worker.\n",
+    "The worker-worker agreement $WWA(i)$ is the average cosine distance between the annotations of a worker $i$ and all other workers that have worked on the same media units as worker $i$, weighted by the worker and annotation qualities. The metric gives an indication as to whether there are consisently like-minded workers. This is useful for identifying communities of thought. Through the weighted average, workers and annotations with lower quality will have less of an impact on the final score of the given worker.\n",
     "\n",
-    "$$ WWA(i) = \\frac{ \\sum_{j \\in workers(s \\in sentences(i))} Wcos(WorkVec(i, s), WorkVec(j, s)) \\; WQS(j) \\; UQS(s) }{ \\sum_{j \\in workers(s \\in sentences(i))} WQS(j) \\; UQS(s) }, \\; i \\neq j .$$\n",
+    "$$ WWA(i) = \\frac{ \\sum_{j \\in workers(u \\in units(i))} Wcos(WorkVec(i, u), WorkVec(j, u)) \\; WQS(j) \\; UQS(u) }{ \\sum_{j \\in workers(s \\in units(i))} WQS(j) \\; UQS(u) }, \\; i \\neq j .$$\n",
     "\n",
     "\n",
     "## Annotation Quality Score (AQS)\n",
     "\n",
-    "The annotation quality score $AQS(a)$ calculates the agreement of selecting a relation $a$, over all the sentences it appears in. Therefore, it is only applicable to closed tasks, where the same annotation set is used for all input media units. It is based on $P_a(i | j)$, the probability that if a worker $j$ annotates $a$ in a sentence, worker $i$ will also annotate it. $AQS(a)$ is the weighted average of $P_a(i | j)$ for all possible pairs of workers. Through the weighted average, input media units and workers with lower quality will have less of an impact on the final score of the annotation.\n",
+    "The annotation quality score $AQS(a)$ calculates the agreement of selecting an annotation $a$, over all the media units it appears in. Therefore, it is only applicable to closed tasks, where the same annotation set is used for all input media units. It is based on $P_a(i | j)$, the probability that if a worker $j$ annotates $a$ in a media unit, worker $i$ will also annotate it. $AQS(a)$ is the weighted average of $P_a(i | j)$ for all possible pairs of workers. Through the weighted average, input media units and workers with lower quality will have less of an impact on the final score of the annotation.\n",
     "\n",
     "$$ AQS(a) = \\frac{ \\sum_{i,j} WQS(i) \\; WQS(j) \\; P_a(i | j) }{ \\sum_{i,j} WQS(i) \\; WQS(j) }, i \\neq j .$$\n",
     "\n",
-    "$$ P_a(i | j) = \\frac{ \\sum_{s \\in units(i) \\cap sentences(j) } SQS(s) \\; WorkVec(i, s)(r) \\; WorkVec(j, s)(r) }{ \\sum_{s \\in units(i) \\cap units(j) } SQS(s) \\; WorkVec(j, s)(r) } . $$\n",
+    "$$ P_a(i | j) = \\frac{ \\sum_{u \\in units(i) \\cap units(j) } UQS(u) \\; WorkVec(i, s)(r) \\; WorkVec(j, s)(r) }{ \\sum_{u \\in units(i) \\cap units(j) } UQS(u) \\; WorkVec(j, u)(r) } . $$\n",
     "\n",
     "\n",
     "## Media Unit-Annotation Score (UAS)\n",
     "\n",
     "The media unit - annotation score $UAS(u, a)$ calculates the likelihood that annotation $a$ is expressed in input media unit $u$. It is the ratio of the number of workers that picked annotation $u$ over all workers that annotated the unit, weighted by the worker quality.\n",
     "\n",
-    "$$ UAS(u, a) = \\frac{ \\sum_{i \\in workers(s)} WorkVec(i,s)(a) \\; WQS(i) }{ \\sum_{i \\in workers(s)} WQS(i) }. $$"
+    "$$ UAS(u, a) = \\frac{ \\sum_{i \\in workers(u)} WorkVec(i,u)(a) \\; WQS(i) }{ \\sum_{i \\in workers(u)} WQS(i) }. $$"
    ]
   },
   {
