--- a/tutorial/CrowdTruth metrics 2.0 documentation.ipynb
+++ b/tutorial/CrowdTruth metrics 2.0 documentation.ipynb
@@ -77,8 +77,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.DEBUG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -433,7 +444,7 @@
        "[10 rows x 24 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,10 +480,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -491,9 +500,18 @@
     "        \"side_effect\", \"contraindicates\", \"associated_with\", \"is_a\", \"part_of\", \"other\", \"none\"\n",
     "    ]\n",
     "    \n",
+    "    #processing of files that are not created on CF or AMT\n",
+    "    annotation_id = \"_id\" \n",
+    "    unit_id = \"_unit_id\"\n",
+    "    worker_id = \"_worker_id\"\n",
+    "    \n",
     "    def processJudgments(self, judgments):\n",
-    "        # change default separator to whitespace to make it work with our file\n",
     "        for col in self.outputColumns:\n",
+    "            judgments[col] = judgments[col].apply(lambda x: x.replace('[',''))\n",
+    "            judgments[col] = judgments[col].apply(lambda x: x.replace(']',''))\n",
+    "            judgments[col] = judgments[col].apply(lambda x: x.lower())\n",
+    "            \n",
+    "            # change default separator to comma to make it work with our file\n",
     "            judgments[col] = judgments[col].apply(lambda x: x.replace(' ',','))\n",
     "        return judgments\n",
     "\n",
@@ -502,11 +520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:PROCESSING FILE: relex_example.csv\n",
+      "INFO:root:Values not stored as dictionary\n"
+     ]
+    }
+   ],
    "source": [
     "# pre-process the data and create the annotation vectors\n",
     "from controllers.inputController import processFile\n",
@@ -518,11 +543,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:1 iterations; max d= 1.0 ; wqs d= 0.808479984859; sqs d= 0.678271656886; rqs d= 0.782716968453\n",
+      "INFO:root:2 iterations; max d= 0.362706167513 ; wqs d= 0.186731311998; sqs d= 0.101205303473; rqs d= 0.0664592042013\n",
+      "INFO:root:3 iterations; max d= 0.0668038864368 ; wqs d= 0.0219762777634; sqs d= 0.0188626314265; rqs d= 0.0124534523229\n",
+      "INFO:root:4 iterations; max d= 0.0709726194493 ; wqs d= 0.0140622732519; sqs d= 0.00563732762184; rqs d= 0.00381414831069\n",
+      "INFO:root:5 iterations; max d= 0.0161430086574 ; wqs d= 0.0019463212434; sqs d= 0.00177373621005; rqs d= 0.00139466081889\n",
+      "INFO:root:6 iterations; max d= 0.00670125388566 ; wqs d= 0.00136541310423; sqs d= 0.000708303571214; rqs d= 0.000444496327269\n",
+      "INFO:root:7 iterations; max d= 0.00285693565195 ; wqs d= 0.000269762538374; sqs d= 0.000206191626161; rqs d= 0.000168853789655\n",
+      "INFO:root:8 iterations; max d= 0.00111394557533 ; wqs d= 0.000157718794846; sqs d= 0.000103046506281; rqs d= 6.58805753409e-05\n",
+      "INFO:root:9 iterations; max d= 0.000479591584969 ; wqs d= 4.36422257029e-05; sqs d= 2.89637465969e-05; rqs d= 2.09729927648e-05\n"
+     ]
+    }
+   ],
    "source": [
     "# run the metrics\n",
     "from models import Metrics\n",
@@ -532,9 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -569,9 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -603,9 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -637,9 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -720,9 +751,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
