--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install CrowdTruth==2.0a1\n",
+    "# !pip install crowdtruth\n",
     "\n",
     "import crowdtruth\n",
     "from crowdtruth.configuration import DefaultConfig\n",
