--- a/tutorial/Binary Choice Task - Relation Extraction.ipynb
+++ b/tutorial/Binary Choice Task - Relation Extraction.ipynb
@@ -271,7 +271,7 @@
     "* **`inputColumns`:** list of input columns from the .csv file with the input data\n",
     "* **`outputColumns`:** list of output columns from the .csv file with the answers from the workers\n",
     "* **`open_ended_task`:** boolean variable defining whether the task is open-ended (i.e. the possible crowd annotations are not known beforehand, like in the case of free text input); in the task that we are processing, workers pick the answers from a pre-defined list, therefore the task is not open ended, and this variable is set to `False`\n",
-    "* **`annotation_vector`:** list of possible crowd answers, mandatory to declare when `open_ended_task` is `False`; for our task, this is the list of relations\n",
+    "* **`annotation_vector`:** list of possible crowd answers, mandatory to declare when `open_ended_task` is `False`; for our task, this is a list containing `true` and `false` values\n",
     "* **`processJudgments`:** method that defines processing of the raw crowd data; for this task, we process the crowd answers to correspond to the values in `annotation_vector`\n",
     "\n",
     "The complete configuration class is declared below:"
