--- a/tutorial/Multiple Choice Task - Person Type Extraction in Video.ipynb
+++ b/tutorial/Multiple Choice Task - Person Type Extraction in Video.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# CrowdTruth for Multiple Choice Tasks: Person Type Extraction in Video\n",
     "\n",
-    "In this tutorial, we will apply CrowdTruth metrics to a **multiple choice** crowdsourcing task for **Person Type Extraction** from **video fragments**. The workers were asked to watch a video of about 3-5 seconds and then pick from a multiple choice list which are the types of person that appear in the video fragment. The task was executed on [FigureEight](https://www.figure-eight.com/).\n",
+    "In this tutorial, we will apply CrowdTruth metrics to a **multiple choice** crowdsourcing task for **Person Type Extraction** from **video fragments**. The workers were asked to watch a video of about 3-5 seconds and then pick from a multiple choice list which are the types of person that appear in the video fragment. The task was executed on [FigureEight](https://www.figure-eight.com/). For more crowdsourcing annotation task examples, click [here](https://raw.githubusercontent.com/CrowdTruth-core/tutorial/getting_started.md).\n",
+    "\n",
+    "To replicate this experiment, the code used to design and implement this crowdsourcing annotation template is available here: [template](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/People-Video-Multiple-Choice/template.html), [css](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/People-Video-Multiple-Choice/template.css), [javascript](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/People-Video-Multiple-Choice/template.js). \n",
     "\n",
     "This is a screenshot of the task as it appeared to workers:\n",
     "\n",
