--- a/tutorial/Sparse Multiple Choice Task - Relation Extraction.ipynb
+++ b/tutorial/Sparse Multiple Choice Task - Relation Extraction.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "In this tutorial, we will apply CrowdTruth metrics to a **sparse multiple choice** crowdsourcing task for **Relation Extraction** from sentences. The workers were asked to read a sentence with 2 highlighted terms, then pick from a multiple choice list what are the relations expressed between the 2 terms in the sentence. The options availamultiple choice list changes with the input sentence. The task was executed on [FigureEight](https://www.figure-eight.com/).\n",
     "\n",
+    "To replicate this experiment, the code used to design and implement this crowdsourcing annotation template is available here: [template](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/Relex-Sparse-Multiple-Choice/template.html), [css](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/Relex-Sparse-Multiple-Choice/template.css), [javascript](https://raw.githubusercontent.com/CrowdTruth/CrowdTruth-core/master/tutorial/templates/Relex-Sparse-Multiple-Choice/template.js). \n",
+    "\n",
     "This is a screenshot of the task as it appeared to workers:\n",
     "\n",
     "![Task Template](img/relex-sparse-multiple-choice.png)"
@@ -293,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class TestConfig(DefaultConfig):\n",
@@ -502,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "results = crowdtruth.run(data, config)"
