dim red nb full explanation

--- a/tutorial/Dimensionality Reduction - Stopword Removal from Media Unit & Annotation.ipynb
+++ b/tutorial/Dimensionality Reduction - Stopword Removal from Media Unit & Annotation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Stopword Removal from Media Unit & Annotation\n",
     "\n",
-    "In this tutorial, we will show how *dimensionality reduction* can be applied over *both the media units and the annotations* of a crowdsourcing task, and how this impacts the results of the CrowdTruth quality metrics. We start with an *open-ended extraction task*, where the crowd was asked to highlight words or phrases in a text that identify or refer to people in a video. The task was executed on [FigureEight](https://www.figure-eight.com/). This is how the task looked like to the workers:\n",
+    "In this tutorial, we will show how *dimensionality reduction* can be applied over *both the media units and the annotations* of a crowdsourcing task, and how this impacts the results of the CrowdTruth quality metrics. We start with an *open-ended extraction task*, where the crowd was asked to highlight words or phrases in a text that identify or refer to people in a video. The task was executed on [Figure Eight](https://www.figure-eight.com/). This is how the task looked like to the workers:\n",
     "\n",
     "![Task Template](img/person-video-highlight.png)"
    ]
@@ -158,14 +158,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Removing stopwords from Units and Annotations"
+    "## Removing stopwords from Media Units and Annotations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function that removes stopwords from strings:"
+    "A more complex dimensionality reduction technique involves removing the stopwords from both the *media units* and the crowd *annotations*. Stopwords (i.e. words that are very common in the English language) do not usually contain much useful information. Also, the behavior of the crowds w.r.t them is inconsistent - some workers omit them, some annotate them.\n",
+    "\n",
+    "The first step is to build a function that removes stopwords from strings. We will use the `stopwords` corpus in the `nltk` package to get the list of words. We want to build a function that can be reused for both the text in the media units and in the annotations column. Also, we need to be careful about omitting punctuation.\n",
+    "\n",
+    "The function `remove_stop_words` does all of these things:"
    ]
   },
   {
@@ -183,8 +187,13 @@
     "stopword_set = set(stopwords.words('english'))\n",
     "stopword_set.update(['s'])\n",
     "\n",
-    "def remove_stop_words(all_words, sep):\n",
-    "    words_list = all_words.replace(\"'\", sep).split(sep)\n",
+    "def remove_stop_words(words_string, sep):\n",
+    "    '''\n",
+    "    words_string: string containing all words\n",
+    "    sep: separator character for the words in words_string\n",
+    "    '''\n",
+    "\n",
+    "    words_list = words_string.replace(\"'\", sep).split(sep)\n",
     "    corrected_words_list = \"\"\n",
     "    for word in words_list:\n",
     "        if word.translate(None, string.punctuation) not in stopword_set:\n",
@@ -198,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final configuration class:"
+    "In the new configuration class `ConfigDimRed`, we apply the function we just built to both the column that contains the media unit text (`inputColumns[2]`), and the column containing the crowd annotations (`outputColumns[0]`):"
    ]
   },
   {
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -257,12 +266,12 @@
    "source": [
     "## Effect on CrowdTruth metrics\n",
     "\n",
-    "Finally, we can compare the effect of the stopword removal on the CrowdTruth quality metrics."
+    "Finally, we can compare the effect of the stopword removal on the CrowdTruth *sentence quality score*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +282,7 @@
        "Text(0,0.5,'without stopwords')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -305,8 +314,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The red line in the plot runs through the diagonal. All sentences above the line have a higher *sentence quality score* when the stopwords were removed.\n",
+    "\n",
+    "The plot shows that removing the stopwords improved the quality for a majority of the sentences. Surprisingly though, some sentences decreased in quality. This effect can be understood when plotting the *worker quality scores*."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +335,7 @@
        "Text(0,0.5,'without stopwords')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -341,6 +359,13 @@
     "plt.title(\"Worker Quality Score\")\n",
     "plt.xlabel(\"with stopwords\")\n",
     "plt.ylabel(\"without stopwords\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The quality of the majority of workers also has increased in the configuration where we removed the stopwords. However, because of the inter-linked nature of the CrowdTruth quality metrics, the annotations of these workers now has a greater weight when calculating the *sentence quality score*. So the stopword removal process had the effect of removing some of the noise in the annotations and therefore increasing the quality scores, but also of *amplifying the true ambiguity in the sentences*."
    ]
   },
   {
