--- a/tutorial/Dimensionality Reduction - Stopword Removal from Media Unit & Annotation.ipynb
+++ b/tutorial/Dimensionality Reduction - Stopword Removal from Media Unit & Annotation.ipynb
@@ -121,13 +121,16 @@
     "    \n",
     "    def processJudgments(self, judgments):\n",
     "        # build annotation vector just from words\n",
-    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(lambda x: str(x).replace(\n",
-    "            ' ',self.annotation_separator))\n",
+    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(\n",
+    "            lambda x: str(x).replace(' ',self.annotation_separator))\n",
     "\n",
     "        # normalize vector elements\n",
-    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(lambda x: str(x).replace('[',''))\n",
-    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(lambda x: str(x).replace(']',''))\n",
-    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(lambda x: str(x).replace('\"',''))\n",
+    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(\n",
+    "            lambda x: str(x).replace('[',''))\n",
+    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(\n",
+    "            lambda x: str(x).replace(']',''))\n",
+    "        judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(\n",
+    "            lambda x: str(x).replace('\"',''))\n",
     "        return judgments"
    ]
   },
@@ -151,7 +154,10 @@
     "    config = Config()\n",
     ")\n",
     "\n",
-    "processed_results_with_stopwords = crowdtruth.run(data_with_stopwords, config_with_stopwords)"
+    "processed_results_with_stopwords = crowdtruth.run(\n",
+    "    data_with_stopwords,\n",
+    "    config_with_stopwords\n",
+    ")"
    ]
   },
   {
@@ -246,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +263,10 @@
     "    config = ConfigDimRed()\n",
     ")\n",
     "\n",
-    "processed_results_without_stopwords = crowdtruth.run(data_without_stopwords, config_without_stopwords)"
+    "processed_results_without_stopwords = crowdtruth.run(\n",
+    "    data_without_stopwords,\n",
+    "    config_without_stopwords\n",
+    ")"
    ]
   },
   {
