--- a/tutorial/Dimensionality Reduction - Stopword Removal from Media Unit & Annotation.ipynb
+++ b/tutorial/Dimensionality Reduction - Stopword Removal from Media Unit & Annotation.ipynb
@@ -93,8 +93,8 @@
     "We build the annotation vector to have one component for each word in the sentence. To do this, we break up multiple-word annotations into a list of single words in the `processJudgments` call:\n",
     "\n",
     "```\n",
-    "judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(lambda x: str(x).replace(\n",
-    "            ' ',self.annotation_separator))\n",
+    "judgments[self.outputColumns[0]] = judgments[self.outputColumns[0]].apply(\n",
+    "            lambda x: str(x).replace(' ',self.annotation_separator))\n",
     "```\n",
     "\n",
     "The final configuration class `Config` is this:"
